--- a/dashboard/templates/dashboard/pal_activity_create.html
+++ b/dashboard/templates/dashboard/pal_activity_create.html
@@ -5,12 +5,12 @@
 {% block content %}
 
 <div class="container mt-4 mb-4">
-    <h2>Edit Activity Program</h2>
+    <h2>{% trans "Edit Activity Program" %}</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Save Changes</button>
-        <a href="{% url 'pal' %}" class="btn btn-secondary">Cancel</a>
+        <button type="submit" class="btn btn-primary">{% trans "Save Changes" %}</button>
+        <a href="{% url 'pal' %}" class="btn btn-secondary">{% trans "Cancel" %}</a>
     </form>
 </div>
 {% endblock %}
