--- a/dashboard/templates/dashboard/pal_activity_delete.html
+++ b/dashboard/templates/dashboard/pal_activity_delete.html
@@ -1,4 +1,7 @@
-{% extends "base.html" %}
+{% extends "general/base.html" %}
+{% load static %}
+{% load i18n %}
+
 {% block content %}
 <!-- Header -->
     <div class="header">
@@ -11,16 +14,10 @@
 <div class="container mt-4">
     <h2>Delete Activity Program</h2>
     <p>Are you sure you want to delete this activity?</p>
-    <ul>
-        <li><b>User:</b> {{ object.user }}</li>
-        <li><b>Registration No.:</b> {{ object.registration_nr }}</li>
-        <li><b>Week:</b> {{ object.week }}</li>
-        <li><b>Activity Title:</b> {{ object.activity_title }}</li>
-    </ul>
     <form method="post">
         {% csrf_token %}
-        <button type="submit" class="btn btn-danger">Yes, Delete</button>
-        <a href="{% url 'activity_program_list' %}" class="btn btn-secondary">Cancel</a>
+        <button type="submit" class="btn btn-primary">Yes, Delete</button>
+        <a href="{% url 'pal' %}" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
 {% endblock %}
