--- a/timesheet/templates/timesheet/timesheets_list.html
+++ b/timesheet/templates/timesheet/timesheets_list.html
@@ -66,19 +66,15 @@
                                 <td>
                                     <div class="btn-group btn-group-sm">
                                         <!-- Edit Button -->
-                                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateTimesheetModal" title="{% trans 'Edit' %}">
+                                        <a href="{% url 'update_timesheet' timesheet.id %}" class="btn btn-primary" title="{% trans 'Edit' %}">
                                             <i class="fas fa-edit"></i>
-                                        </button>
+                                        </a>
                                         
                                         <!-- Delete Button -->
-                                        <button type="button"
-                                           class="btn btn-danger"
-                                           data-bs-toggle="modal" 
-                                           data-bs-target="#deleteTimesheetModal"  
-                                           title="{% trans 'Delete' %}"
+                                        <a href="{% url 'delete_timesheet' timesheet.id %}" class="btn btn-danger" title="{% trans 'Delete' %}"
                                            onclick="return confirm('{% trans 'Are you sure you want to delete this timesheet?' %}');">
                                             <i class="fas fa-trash"></i>
-                                        </button>
+                                        </a>
                                     </div>
                                 </td>
                             </tr>
