Fixed role field before saving, because of the error when logging in

--- a/users/templates/accounts/user_management.html
+++ b/users/templates/accounts/user_management.html
@@ -8,8 +8,8 @@
 {% block content %}
 <div class="header">
     <div class="container">
-        <h1>{% trans 'User Management' %}</h1>
-        <p class="text-muted">{% trans 'Manage system users and roles' %}</p>
+        <h1>{% trans "User Management" %}</h1>
+        <p class="text-muted">{% trans "Manage system users and roles" %}</p>
     </div>
 </div>
 
